# sphinx-hep-pdgref

./: .cspell.json  .editorconfig  .flake8  .gitignore  .gitpod.yml  .markdown-link-check.json  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .pylintrc  CONTRIBUTING.md  README.md  codecov.yml  environment.yml  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  tox.ini
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci-style.yml  ci-tests.yml  ci.yml  lock.yml  pr-linting.yml  requirements-cron.yml
artifact/: .pre-commit-config.yaml
src/sphinx_hep_pdgref/: __init__.py  entry.py  role.py  url.py
src/sphinxcontrib/: __init__.py
src/sphinxcontrib/hep/pdgref/: __init__.py  entry.py  role.py  url.py
tests/: conftest.py  test_entry.py  test_role.py  test_url.py
tests/roots/test-dummy/: conf.py  index.rst
