[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    "docutils",
    "sphinx",
]
description = "Sphinx role for linking to PDG reviews and listing"
dynamic = ["version"]
keywords = [
    "particle data group",
    "pdg",
    "reference",
    "sphinx",
]
license = {text = "BSD 3-Clause License"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "sphinx-hep-pdgref"
requires-python = ">=3.10"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
changelog = "https://github.com/ComPWA/sphinx-hep-pdgref/releases"
documentation = "https://github.com/ComPWA/sphinx-hep-pdgref/blob/main/README.md"
issues = "https://github.com/ComPWA/sphinx-hep-pdgref/issues"
source = "https://github.com/ComPWA/sphinx-hep-pdgref"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "style"},
    {include-group = "test"},
]
style = [
    "pyquery",
    "pytest",
    "ty",
    "types-docutils",
    "types-setuptools",
]
test = [
    "pyquery",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/version.py"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "style",
    "cov",
    "test-all",
]

[tool.poe.tasks.cov]
cmd = """
pytest \
    --cov=sphinx_hep_pdgref \
    --cov-fail-under=88 \
    --cov-report=html \
    --cov-report=xml \
    ${paths}
"""
executor = {group = "test"}
help = "Compute how much of the source code is covered by tests"

[[tool.poe.tasks.cov.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = {group = "style"}
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.test]
cmd = "pytest ${paths}"
executor = {group = "test"}
help = "Run all unit tests"

[[tool.poe.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-all]
help = "Run all tests on each supported Python version"
sequence = [
    {ref = "test-py310 ${paths}"},
    {ref = "test-py311 ${paths}"},
    {ref = "test-py312 ${paths}"},
    {ref = "test-py313 ${paths}"},
    {ref = "test-py314 ${paths}"},
]

[[tool.poe.tasks.test-all.args]]
default = ""
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-py310]
env = {UV_PYTHON = "3.10"}
ref = "test"

[tool.poe.tasks.test-py311]
env = {UV_PYTHON = "3.11"}
ref = "test"

[tool.poe.tasks.test-py312]
env = {UV_PYTHON = "3.12"}
ref = "test"

[tool.poe.tasks.test-py313]
env = {UV_PYTHON = "3.13"}
ref = "test"

[tool.poe.tasks.test-py314]
env = {UV_PYTHON = "3.14"}
ref = "test"

[tool.pytest]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:The distutils package is deprecated.*:DeprecationWarning",
]
minversion = "9.0"
testpaths = [
    "src",
    "tests",
]

[tool.ruff]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "ARG001",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
    "UP036",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D100"]
"tests/*" = [
    "ANN",
    "D",
    "FBT001",
    "INP001",
    "PLC2701",
    "PLR0913",
    "PLR2004",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
