[metadata]
name = sphinxcontrib-hep-pdgref
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Sphinx role for linking to PDG reviews and listing
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/sphinxcontrib-hep-pdgref/issues
    Changelog = https://github.com/ComPWA/sphinxcontrib-hep-pdgref/releases
    Documentation = https://github.com/ComPWA/sphinxcontrib-hep-pdgref/blob/main/README.md
    Source = https://github.com/ComPWA/sphinxcontrib-hep-pdgref
license = GPLv3 or later
keywords =
    particle data group
    pdg
    reference
    sphinx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    attrs
    docutils
    Sphinx
include_package_data = True
namespace_packages = sphinxcontrib
package_dir =
    =src
packages = find_namespace:

[options.extras_require]
test =
    pyquery  # for checking HTML output
    pytest
    pytest-cov
format =
    black
    isort
lint =
    flake8 >= 3  # for per-file-ignores
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-rst-docstrings
    mypy >= 0.570  # attrs support
    pep8-naming
    pydocstyle
    pylint
sty =
    pre-commit >= 1.4.0
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    types-docutils
dev =
    %(sty)s
    %(test)s
    tox >= 1.9  # for skip_install, use_develop

[options.packages.find]
include =
    sphinxcontrib.hep.*
where = src

[options.package_data]
* =
    py.typed
