[metadata]
name = sphinx-hep-pdgref
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Sphinx role for linking to PDG reviews and listing
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/sphinx-hep-pdgref/issues
    Changelog = https://github.com/ComPWA/sphinx-hep-pdgref/releases
    Documentation = https://github.com/ComPWA/sphinx-hep-pdgref/blob/main/README.md
    Source = https://github.com/ComPWA/sphinx-hep-pdgref
license = BSD 3-Clause License
license_files = LICENSE
keywords =
    particle data group
    pdg
    reference
    sphinx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    docutils
    Sphinx
include_package_data = True
package_dir =
    =src
packages = find:

[options.extras_require]
test =
    importlib-metadata; python_version <"3.8.0"
    pyquery  # for checking HTML output
    pytest
    pytest-cov
    pytest-xdist
format =
    black
mypy =
    mypy >=0.730  # attrs and error code support
    types-docutils
    types-setuptools
lint =
    %(mypy)s
    ruff
sty =
    pre-commit >=1.4.0
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
dev =
    %(sty)s
    %(test)s
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
* =
    py.typed
